<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/home_menu"
        android:title="@string/home"
        android:icon="@drawable/ic_home_black_24dp"/>

    <item
        android:id="@+id/daily_activity_menu"
        android:title="@string/daily_activity"
        android:icon="@drawable/ic_dob"/>

    <item
        android:id="@+id/gallery_menu"
        android:title="@string/gallery"
        android:icon="@drawable/ic_dashboard_black_24dp"/>

    <item
        android:id="@+id/favorite_menu"
        android:title="@string/favorite"
        android:icon="@drawable/ic_name"/>

    <item
        android:id="@+id/profile_menu"
        android:title="@string/profile"
        android:icon="@drawable/iconfinder_motorcycle_motorbike_land_vehicle_transportation"/>

</menu>